crates/reinhardt-pages/tests/ui/client_form/fail/collection_field.rs
use reinhardt_pages::ClientForm;

#[derive(Clone, PartialEq, ClientForm)]
struct CollectionRequest {
	names: Vec<String>,
}

fn main() {}
