crates/reinhardt-pages/tests/ui/client_form/fail/collection_field.stderr
error: ClientForm does not support collection, map, or generic fields
 --> tests/ui/client_form/fail/collection_field.rs:5:9
  |
5 |     names: Vec<String>,
  |            ^^^^^^^^^^^
